--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/knex": "^0.16.1",
+    "@types/moment": "^2.13.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.95.4",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
